deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    name: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1
        image: sneka/addressbook:15
        ports:
        - containerPort: 8080
