deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2
  labels:
    name: app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
      - name: sample-ctr2
        image: nginx
        ports:
        - containerPort: 80
