deploy_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    name: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: sample-ctr
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: pv-storage
      volumes:
      - name: pv-storage
        persistentVolumeclaim:
            claimName: test-pvc
