pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    zone: prod
    version: v1
spec:
  containers:
  - name: sample-ctr
    image: devopstrainer/deploy:v1
    ports:
      - containerPort: 80
