canaryservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc1
  labels:
    name: app-v1
spec:
  selector:
    zone: prod
  ports:
  - port: 80
    nodePort: 30005
    protocol: TCP
  type: NodePort
