service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc1
  labels:
    name: app-v1
spec:
  selector:
    app: app-v1
  ports:
  - port: 8080
    nodePort: 30001
    protocol: TCP
  type: NodePort
