svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc2
  labels:
    name: app-v2
spec:
  selector:
    app: app-v2
  ports:
  - port: 80
    targetPort: 30002
    protocol: TCP
  type: LoadBalancer
