ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/cart"
        backend:
          service:
            name: srvc1
            port: 
              number: 80
      - pathType: Prefix
        path: "/cart"
        backend:
          service:
            name: srvc2
            port: 
              number: 80
